--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "my social media web application",
   "main": "chat.js",
   "scripts": {
-    "start" : "nodemon chat.js",
+    "start": "nodemon chat.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Saba Parveen",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.1"
   }
 }
