--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Saba Parveen",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongoose": "^6.4.6"
