converting into AJAX

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chatting_engine",
+  "name": "codeial",
   "version": "1.0.0",
   "description": "my social media web application",
   "main": "chat.js",
